# pygron

./: .gitignore  LICENSE  README.rst  pyproject.toml
pygron/: main.py
tests/: test_pygron.py
