[tool.poetry]
name = "pygron"
version = "0.0.1-alpha"
description = ""
authors = ["nikhil <ch17btech11023@iith.ac.in>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
